Fixed info display - it is closing after 5 sec on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -553,6 +553,7 @@ textarea {
     color: #005596;
     display: none;
     height: 2em;
+    text-align: center;
 }
 
 #info-text.visible {
